# techno_tetris

./: .gitignore  README.md
godot/: .gitignore  main.tscn  project.godot
godot/assets/: tiles.pxo
godot/playfield/: playfield.tscn  playfield_tileset.tres
godot/spawner/: spawner.gd  spawner.tscn
godot/tetrominos/: I.tscn  L.tscn  O.tscn  S.tscn  T.tscn  Z.tscn
godot/tetrominos/base/: tetromino.gd  tetromino.tscn
godot/tiles/: corner.tscn  corner_left.tscn  corner_right.tscn  cross.tscn  empty.tscn  full.tscn  one.tscn  one_up.tscn  street.tscn  turn.tscn
godot/tiles/base/: tile.tscn
godot/tiles/textures/: corner_left.tres  corner_right.tres  cross.tres  empty.tres  full.tres  one.tres  street.tres  turn.tres
rust/: Cargo.toml  build.ps1
rust/src/: lib.rs
