[package]
name = "techno_tetris"
version = "0.1.0"
authors = ["Sarvarian <30783095+Sarvarian@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.3"

[lib]
crate-type = ["cdylib"]